Make the website prettier by adding more content to the language and skills

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Personal Site</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+  <!-- HEADER -->
   <header class="site-header">
     <nav class="nav">
       <a href="#home">Home</a>
@@ -18,14 +20,16 @@
     </nav>
   </header>
 
+  <!-- HERO -->
   <section id="home" class="hero">
     <div class="hero-content">
       <h1>Hello, I'm Javier</h1>
-      <p>I'm learning web development and building projects this semester.</p>
+      <p>I'm learning web development and building projects this semester. My strength is in Digital Art including Pixel art, 2D Art, and 3D Art, and 3D Art</p>
       <a class="btn" href="#skills">See My Skills</a>
     </div>
   </section>
 
+  <!-- BIO -->
   <section id="about" class="bio">
     <div class="bio-image">
       <img src="img/PhotoProfile.jpg" alt="Profile photo">
@@ -33,12 +37,13 @@
     <div class="bio-text">
       <h2>About Me</h2>
       <p>
-        I'm a college student creating my first portfolio site. I like digital art,
+        I'm a college student creating my second portfolio site. I like digital art,
         pixel art, and 3D modeling. This site will grow as I make more projects.
       </p>
     </div>
   </section>
 
+  <!-- SKILLS -->
   <section id="skills" class="skills">
     <div class="skills-inner">
       <h2>Art Skills</h2>
@@ -80,37 +85,66 @@
     </div>
   </section>
 
+  <!-- LANGUAGES -->
   <section id="languages" class="languages">
     <h2>Programming Languages</h2>
     <div class="language-grid">
       <div class="language-card">
-        <i class="fa-brands fa-html5"></i>
+        <i class="devicon-html5-plain colored lang-icon" aria-hidden="true"></i>
         <span>HTML</span>
       </div>
       <div class="language-card">
-        <i class="fa-brands fa-css3-alt"></i>
+        <i class="devicon-css3-plain colored lang-icon" aria-hidden="true"></i>
         <span>CSS</span>
       </div>
       <div class="language-card">
-        <i class="fa-brands fa-js"></i>
+        <i class="devicon-javascript-plain colored lang-icon" aria-hidden="true"></i>
         <span>JavaScript</span>
+      </div>
+      <div class="language-card">
+        <i class="devicon-python-plain colored lang-icon" aria-hidden="true"></i>
+        <span>Python</span>
+      </div>
+      <div class="language-card">
+        <i class="devicon-java-plain colored lang-icon" aria-hidden="true"></i>
+        <span>Java</span>
+      </div>
+      <div class="language-card">
+        <i class="devicon-c-plain colored lang-icon" aria-hidden="true"></i>
+        <span>C</span>
+      </div>
+      <div class="language-card">
+        <i class="devicon-ocaml-plain colored lang-icon" aria-hidden="true"></i>
+        <span>OCaml</span>
+      </div>
+      <div class="language-card">
+        <i class="devicon-sqlite-plain colored lang-icon" aria-hidden="true"></i>
+        <span>SQL</span>
+      </div>
+      <div class="language-card">
+        <i class="devicon-dart-plain colored lang-icon" aria-hidden="true"></i>
+        <span>Dart</span>
       </div>
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer id="contact" class="footer">
-    <p>Email: youremail@example.com</p>
+    <p>jbradlim1@hawk.illinoistech.edu</p>
   </footer>
 
+  <!-- SCRIPTS for skills scrolling -->
   <script>
     const track = document.getElementById("skills-track");
     const leftBtn = document.querySelector(".scroll-btn.left");
     const rightBtn = document.querySelector(".scroll-btn.right");
 
+    // Scroll left if clicked
     leftBtn.addEventListener("click", () => {
       track.scrollBy({ left: -320, behavior: "smooth" });
     });
 
+    // Scroll right if clicked
     rightBtn.addEventListener("click", () => {
       track.scrollBy({ left: 320, behavior: "smooth" });
     });
