Change Skills Layout

--- a/index.html
+++ b/index.html
@@ -50,43 +50,228 @@
   </section>
 
   <!-- SKILLS -->
+    <!-- SKILLS -->
   <section id="skills" class="skills">
     <div class="skills-inner">
       <h2>Art Skills</h2>
-      <div class="skills-wrapper">
-        <button class="scroll-btn left" type="button" aria-label="Scroll left">
-          <i class="fa-solid fa-angle-left"></i>
-        </button>
-        <div class="skills-track" id="skills-track">
+      <div class="skills-row">
+        <h3 class="skills-row-title">Pixel Art</h3>
+        <div class="skills-wrapper">
+          <button class="scroll-btn left" type="button" aria-label="Scroll left">
+            <i class="fa-solid fa-angle-left"></i>
+          </button>
+          <div class="skills-track">
           <article id="skill-1" class="skill-card">
-            <img src="img/laptop.jpg" alt="Pixel art example">
-            <h3>Pixel Art</h3>
-            <p>Small, detailed sprites and scenes.</p>
-          </article>
+                      <img src="img/pixel_art/10%20characters.png" alt="Pixel art - 10 characters.png">
+                      <p>10 characters</p>
+                    </article>
           <article id="skill-2" class="skill-card">
-            <img src="img/hero-bg.jpg" alt="2D art example">
-            <h3>2D Art</h3>
-            <p>Character sketches and illustrations.</p>
-          </article>
+                      <img src="img/pixel_art/Character_1%20setting.gif" alt="Pixel art - Character_1 setting.gif">
+                      <p>Character_1 setting</p>
+                    </article>
           <article id="skill-3" class="skill-card">
-            <img src="img/laptop.jpg" alt="3D art example">
-            <h3>3D Art</h3>
-            <p>Simple models and low-poly scenes.</p>
-          </article>
+                      <img src="img/pixel_art/Isometric%20gaming%20room.gif" alt="Pixel art - Isometric gaming room.gif">
+                      <p>Isometric gaming room</p>
+                    </article>
           <article id="skill-4" class="skill-card">
-            <img src="img/hero-bg.jpg" alt="Concept art example">
-            <h3>Concept Art</h3>
-            <p>Quick ideas and mood sketches.</p>
-          </article>
+                      <img src="img/pixel_art/Mecha%20human_1.gif" alt="Pixel art - Mecha human_1.gif">
+                      <p>Mecha human_1</p>
+                    </article>
           <article id="skill-5" class="skill-card">
-            <img src="img/laptop.jpg" alt="Animation example">
-            <h3>Animation</h3>
-            <p>Short loops and motion tests.</p>
-          </article>
+                      <img src="img/pixel_art/Platformer_1.jpg" alt="Pixel art - Platformer_1.jpg">
+                      <p>Platformer_1</p>
+                    </article>
+          <article id="skill-6" class="skill-card">
+                      <img src="img/pixel_art/Platformer_2.png" alt="Pixel art - Platformer_2.png">
+                      <p>Platformer_2</p>
+                    </article>
+          <article id="skill-7" class="skill-card">
+                      <img src="img/pixel_art/QuartetRPG%20scene.png" alt="Pixel art - QuartetRPG scene.png">
+                      <p>QuartetRPG scene</p>
+                    </article>
+          <article id="skill-8" class="skill-card">
+                      <img src="img/pixel_art/RPG%20View.jpg" alt="Pixel art - RPG View.jpg">
+                      <p>RPG View</p>
+                    </article>
+          <article id="skill-9" class="skill-card">
+                      <img src="img/pixel_art/Scenery.png" alt="Pixel art - Scenery.png">
+                      <p>Scenery</p>
+                    </article>
+          <article id="skill-10" class="skill-card">
+                      <img src="img/pixel_art/Simple%20Isometric%20Room.png" alt="Pixel art - Simple Isometric Room.png">
+                      <p>Simple Isometric Room</p>
+                    </article>
+          <article id="skill-11" class="skill-card">
+                      <img src="img/pixel_art/Space.png" alt="Pixel art - Space.png">
+                      <p>Space</p>
+                    </article>
+          <article id="skill-12" class="skill-card">
+                      <img src="img/pixel_art/Top%20down%20view%20environment.png" alt="Pixel art - Top down view environment.png">
+                      <p>Top down view environment</p>
+                    </article>
+          <article id="skill-13" class="skill-card">
+                      <img src="img/pixel_art/Top%20down%20view%20space.png" alt="Pixel art - Top down view space.png">
+                      <p>Top down view space</p>
+                    </article>
+          </div>
+          <button class="scroll-btn right" type="button" aria-label="Scroll right">
+            <i class="fa-solid fa-angle-right"></i>
+          </button>
         </div>
-        <button class="scroll-btn right" type="button" aria-label="Scroll right">
-          <i class="fa-solid fa-angle-right"></i>
-        </button>
+      </div>
+      <div class="skills-row">
+        <h3 class="skills-row-title">2D Art</h3>
+        <div class="skills-wrapper">
+          <button class="scroll-btn left" type="button" aria-label="Scroll left">
+            <i class="fa-solid fa-angle-left"></i>
+          </button>
+          <div class="skills-track">
+          <article id="skill-14" class="skill-card">
+                      <img src="img/2d_art/Acidic%20Spray.png" alt="2D art - Acidic Spray.png">
+                      <p>Acidic Spray</p>
+                    </article>
+          <article id="skill-15" class="skill-card">
+                      <img src="img/2d_art/Card%20Pack.png" alt="2D art - Card Pack.png">
+                      <p>Card Pack</p>
+                    </article>
+          <article id="skill-16" class="skill-card">
+                      <img src="img/2d_art/Decaying%20Aura.png" alt="2D art - Decaying Aura.png">
+                      <p>Decaying Aura</p>
+                    </article>
+          <article id="skill-17" class="skill-card">
+                      <img src="img/2d_art/Dessert%20in%20Danger%20Advertisement.jpg" alt="2D art - Dessert in Danger Advertisement.jpg">
+                      <p>Dessert in Danger Advertisement</p>
+                    </article>
+          <article id="skill-18" class="skill-card">
+                      <img src="img/2d_art/Earth%20Splitter.png" alt="2D art - Earth Splitter.png">
+                      <p>Earth Splitter</p>
+                    </article>
+          <article id="skill-19" class="skill-card">
+                      <img src="img/2d_art/Fireball.png" alt="2D art - Fireball.png">
+                      <p>Fireball</p>
+                    </article>
+          <article id="skill-20" class="skill-card">
+                      <img src="img/2d_art/Hex.png" alt="2D art - Hex.png">
+                      <p>Hex</p>
+                    </article>
+          <article id="skill-21" class="skill-card">
+                      <img src="img/2d_art/Ice.png" alt="2D art - Ice.png">
+                      <p>Ice</p>
+                    </article>
+          <article id="skill-22" class="skill-card">
+                      <img src="img/2d_art/Lesser%20Life-Tether.png" alt="2D art - Lesser Life-Tether.png">
+                      <p>Lesser Life-Tether</p>
+                    </article>
+          <article id="skill-23" class="skill-card">
+                      <img src="img/2d_art/Life-leech.png" alt="2D art - Life-leech.png">
+                      <p>Life-leech</p>
+                    </article>
+          <article id="skill-24" class="skill-card">
+                      <img src="img/2d_art/Lightning.png" alt="2D art - Lightning.png">
+                      <p>Lightning</p>
+                    </article>
+          <article id="skill-25" class="skill-card">
+                      <img src="img/2d_art/Magic%20Field.png" alt="2D art - Magic Field.png">
+                      <p>Magic Field</p>
+                    </article>
+          <article id="skill-26" class="skill-card">
+                      <img src="img/2d_art/Magic%20Mirror.png" alt="2D art - Magic Mirror.png">
+                      <p>Magic Mirror</p>
+                    </article>
+          <article id="skill-27" class="skill-card">
+                      <img src="img/2d_art/Poison%20Dart.png" alt="2D art - Poison Dart.png">
+                      <p>Poison Dart</p>
+                    </article>
+          <article id="skill-28" class="skill-card">
+                      <img src="img/2d_art/Smite.png" alt="2D art - Smite.png">
+                      <p>Smite</p>
+                    </article>
+          <article id="skill-29" class="skill-card">
+                      <img src="img/2d_art/Tsunami.png" alt="2D art - Tsunami.png">
+                      <p>Tsunami</p>
+                    </article>
+          <article id="skill-30" class="skill-card">
+                      <img src="img/2d_art/Virus.png" alt="2D art - Virus.png">
+                      <p>Virus</p>
+                    </article>
+          </div>
+          <button class="scroll-btn right" type="button" aria-label="Scroll right">
+            <i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
+      </div>
+      <div class="skills-row">
+        <h3 class="skills-row-title">3D Art</h3>
+        <div class="skills-wrapper">
+          <button class="scroll-btn left" type="button" aria-label="Scroll left">
+            <i class="fa-solid fa-angle-left"></i>
+          </button>
+          <div class="skills-track">
+          <article id="skill-31" class="skill-card">
+                      <img src="img/3d_art/Anvil.png" alt="3D art - Anvil.png">
+                      <p>Anvil</p>
+                    </article>
+          <article id="skill-32" class="skill-card">
+                      <img src="img/3d_art/Bat_3.png" alt="3D art - Bat_3.png">
+                      <p>Bat_3</p>
+                    </article>
+          <article id="skill-33" class="skill-card">
+                      <img src="img/3d_art/Birch%20tree_2.png" alt="3D art - Birch tree_2.png">
+                      <p>Birch tree_2</p>
+                    </article>
+          <article id="skill-34" class="skill-card">
+                      <img src="img/3d_art/Castle_1.png" alt="3D art - Castle_1.png">
+                      <p>Castle_1</p>
+                    </article>
+          <article id="skill-35" class="skill-card">
+                      <img src="img/3d_art/Caution%20Sign.png" alt="3D art - Caution Sign.png">
+                      <p>Caution Sign</p>
+                    </article>
+          <article id="skill-36" class="skill-card">
+                      <img src="img/3d_art/ChairSoborg.png" alt="3D art - ChairSoborg.png">
+                      <p>ChairSoborg</p>
+                    </article>
+          <article id="skill-37" class="skill-card">
+                      <img src="img/3d_art/Chess_2.png" alt="3D art - Chess_2.png">
+                      <p>Chess_2</p>
+                    </article>
+          <article id="skill-38" class="skill-card">
+                      <img src="img/3d_art/Couch.png" alt="3D art - Couch.png">
+                      <p>Couch</p>
+                    </article>
+          <article id="skill-39" class="skill-card">
+                      <img src="img/3d_art/Curve%20monitor.png" alt="3D art - Curve monitor.png">
+                      <p>Curve monitor</p>
+                    </article>
+          <article id="skill-40" class="skill-card">
+                      <img src="img/3d_art/Mountain.png" alt="3D art - Mountain.png">
+                      <p>Mountain</p>
+                    </article>
+          <article id="skill-41" class="skill-card">
+                      <img src="img/3d_art/Mushroom_1.png" alt="3D art - Mushroom_1.png">
+                      <p>Mushroom_1</p>
+                    </article>
+          <article id="skill-42" class="skill-card">
+                      <img src="img/3d_art/Oak%20tree_2.png" alt="3D art - Oak tree_2.png">
+                      <p>Oak tree_2</p>
+                    </article>
+          <article id="skill-43" class="skill-card">
+                      <img src="img/3d_art/Sword.png" alt="3D art - Sword.png">
+                      <p>Sword</p>
+                    </article>
+          <article id="skill-44" class="skill-card">
+                      <img src="img/3d_art/Wally%20example_1.png" alt="3D art - Wally example_1.png">
+                      <p>Wally example_1</p>
+                    </article>
+          <article id="skill-45" class="skill-card">
+                      <img src="img/3d_art/Zelda_2.jpg" alt="3D art - Zelda_2.jpg">
+                      <p>Zelda_2</p>
+                    </article>
+          </div>
+          <button class="scroll-btn right" type="button" aria-label="Scroll right">
+            <i class="fa-solid fa-angle-right"></i>
+          </button>
+        </div>
       </div>
     </div>
   </section>
@@ -142,18 +327,18 @@
 
   <!-- SCRIPTS for skills scrolling -->
   <script>
-    const track = document.getElementById("skills-track");
-    const leftBtn = document.querySelector(".scroll-btn.left");
-    const rightBtn = document.querySelector(".scroll-btn.right");
+    document.querySelectorAll(".skills-row").forEach((row) => {
+      const track = row.querySelector(".skills-track");
+      const leftBtn = row.querySelector(".scroll-btn.left");
+      const rightBtn = row.querySelector(".scroll-btn.right");
 
-    // Scroll left if clicked
-    leftBtn.addEventListener("click", () => {
-      track.scrollBy({ left: -320, behavior: "smooth" });
-    });
+      leftBtn.addEventListener("click", () => {
+        track.scrollBy({ left: -320, behavior: "smooth" });
+      });
 
-    // Scroll right if clicked
-    rightBtn.addEventListener("click", () => {
-      track.scrollBy({ left: 320, behavior: "smooth" });
+      rightBtn.addEventListener("click", () => {
+        track.scrollBy({ left: 320, behavior: "smooth" });
+      });
     });
 
     const themeToggle = document.querySelector(".theme-toggle");
